--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css" >
+    <link rel="manifest" href="./manifest.json">
   </head>
   <body class="grey lighten-4">
 
